--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
 - type: web
   name: flask-postgres-api
   env: python
-  repo: https://github.com/SG765/FitFusion.git
+  repo: https://github.com/VyanPersad/FitFusion.git
   plan: free
   branch: main
   healthCheckPath: /healthcheck
